--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
         quidem rerum facilis est et expedita distinctio.
     </string>
 
-    <string name="objData">Dados</string>
+    <string name="objData">Dados sobre o objeto</string>
     <string name="nItensEncontrados">Nº de Itens Encotrados:</string>
     <string name="dataEncontrados">Data dos itens encontrados:</string>
 
