--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,5 @@
-<html>
 
-  <body>
-    <h1>Achados e perdidos - POA</h1>
+    Achados e perdidos - POA
     
-    <h3>O que é?</h3>
-  </body>
-</html>
+    O que é?
+ 
